# pdf-extraction-agenda

./: .gitignore  LICENSE  README.md  benches.xlsx  convert_xlsx_to_md.py  pyproject.toml  repack_olmOCR_mix_0225.ipynb
.github/ISSUE_TEMPLATE/: add-or-update-pipeline.md  add-pipeline.yaml
.github/workflows/: add-pipeline-comment.js  add-pipeline-comment.yaml
src/pdf_extraction_agenda/: datasets_.py  logging.yaml  logging_.py  main.py  metrics.py  pipeline_docling.py
