[project]
name = "pdf-extraction-agenda"
version = "0.1.0"
description = "Overview of pipelines related to PDF document processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9,<7",
    "datasets>=3.3,<4",
    "huggingface-hub[hf-transfer]>=0.29,<1",
    "pandas>=2.2,<3",
    "pydantic>=2.10,<3",
    "rapidfuzz>=3.12,<4",
    "tabulate>=0.9,<1",
    "tqdm>=4.67,<5",
]

[tool.ruff]
line-length = 120
lint.ignore = ["PLR"]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"

[dependency-groups]
docling = [
    "docling>=2.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
